[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/_Player.gd" type="Script" id=1]
[ext_resource path="res://Asset/Anim/tres/Player1.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scene/UI/PlayerHealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.5, 19 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1, -32 )
collision_layer = 8
collision_mask = 9
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="CheckFloor" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 25 )

[node name="PPlayer" type="Node2D" parent="."]
position = Vector2( 0, 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PPlayer"]
position = Vector2( 11, -4 )
frames = ExtResource( 2 )
animation = "attack"
frame = 4
playing = true

[node name="Area2D" type="Area2D" parent="PPlayer"]
position = Vector2( 22, -2 )
collision_layer = 4
collision_mask = 4

[node name="Atck_Col" type="CollisionShape2D" parent="PPlayer/Area2D"]
position = Vector2( -2.5, -2 )
shape = SubResource( 2 )
disabled = true

[node name="PlayerHealthBar" parent="." instance=ExtResource( 4 )]

[connection signal="animation_finished" from="PPlayer/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="PPlayer/Area2D" to="." method="_on_Area2D_body_entered"]
